--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,8 @@ pages:
   - mkdir .public
   - cp -r * .public
   - mv .public public
+  - yarn install
+  - yarn build
   artifacts:
     paths:
     - public
