--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,24 @@
 # This file is a template, and might need editing before it works on your project.
 # Full project: https://gitlab.com/pages/plain-html
+image: node:9.11.1
+
 pages:
-  stage: deploy
-  script:
-  - mkdir .public
-  - cp -r * .public
-  - mv .public public
-  - yarn install
-  - yarn build
-  artifacts:
+    cache:
+        paths:
+        - node_modules/
+
+    stage: deploy
+    
+    script:
+    - mkdir .public
+    - cp -r * .public
+    - mv .public public
+    - yarn install
+    - yarn build
+    artifacts:
+    
     paths:
     - public
-  only:
-  - master
+    
+    only:
+    - master
