--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "d3": "^5.9.2",
     "d3-textwrap": "^2.0.2",
-    "videojs-youtube": "^2.6.0"
+    "videojs-youtube": "^2.6.0",
+    "webpack": "^4.32.2"
   }
 }
