--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,8 @@
-# This file is a template, and might need editing before it works on your project.
-# Full project: https://gitlab.com/pages/plain-html
-image: node:10.15.3
-
-pages:
-    cache:
-        paths:
-        - node_modules/
-    
-    script:
-    - mkdir .public
-    - cp -r * .public
-    - mv .public public
-    - yarn install
-    
+pages:    
     artifacts:
         paths:
-        - public
-    
+        - dist
     only:
     - master
+    stage:
+    - deploy
