--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^2.1.1",
     "csv-loader": "^3.0.2",
     "d3": "^5.9.2",
+    "file-loader": "^4.0.0",
     "papaparse": "^4.6.3",
     "style-loader": "^0.23.1",
     "videojs": "^1.0.0",
