--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csv-loader": "^3.0.2",
     "d3": "^5.9.2",
     "file-loader": "^4.0.0",
+    "fuse.js": "^3.4.5",
     "papaparse": "^4.6.3",
     "style-loader": "^0.23.1",
     "videojs": "^1.0.0",
