--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "file-loader": "^4.0.0",
     "fuse.js": "^3.4.5",
     "papaparse": "^4.6.3",
+    "query-string": "^6.8.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
