--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3": "^5.9.2",
     "file-loader": "^4.0.0",
     "fuse.js": "^3.4.5",
+    "lodash": "^4.17.14",
     "papaparse": "^4.6.3",
     "query-string": "^6.8.1",
     "style-loader": "^0.23.1",
