--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^2.1.1",
     "csv-loader": "^3.0.2",
     "d3": "^5.9.2",
+    "d3-force-boundary": "0.0.1",
     "file-loader": "^4.0.0",
     "fuse.js": "^3.4.5",
     "lodash": "^4.17.14",
