--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "html-loader": "^1.1.0"
   }
 }
