--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "csv-loader": "^3.0.5",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
+    "postcss-loader": "^7.0.1",
+    "postcss-variables-loader": "^6.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
